# siftrate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  siftrate.py
examples/: blog-post-drafts.json  photo-triage.json  take-home-review.json
