[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siftrate"
dynamic = ["version"]
description = "A single-file, config-driven rating/labeling server — tap-to-score from your phone, results to JSON."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Toby Rosen" }]
keywords = ["rating", "labeling", "annotation", "scoring", "triage", "self-hosted", "single-file", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tobyrosen/siftrate"
Repository = "https://github.com/tobyrosen/siftrate"
Issues = "https://github.com/tobyrosen/siftrate/issues"
Changelog = "https://github.com/tobyrosen/siftrate/blob/main/CHANGELOG.md"

[project.scripts]
siftrate = "siftrate:main"

[tool.setuptools]
py-modules = ["siftrate"]

[tool.setuptools.dynamic]
version = { attr = "siftrate.__version__" }
